--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,20 +1,20 @@
 
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/vertex-ai-backend', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/backend', '.']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/vertex-ai-backend']
+    args: ['push', 'gcr.io/$PROJECT_ID/backend']
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
       - 'run'
       - 'deploy'
       - 'vertex-ai-backend'
-      - '--image=gcr.io/$PROJECT_ID/vertex-ai-backend'
+      - '--image=gcr.io/$PROJECT_ID/backend'
       - '--region=us-central1'
       - '--platform=managed'
       - '--allow-unauthenticated'
       - '--set-env-vars=GCP_PROJECT=$PROJECT_ID,GCP_LOCATION=us-central1'
       
 images:
-  - 'gcr.io/$PROJECT_ID/vertex-ai-backend'
+  - 'gcr.io/$PROJECT_ID/backend'
