--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,8 @@
-
 steps:
+  # Set the working directory to /workspace
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/backend', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/backend', '-f', './Dockerfile', '.']
+    dir: '.'
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/backend']
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -9,7 +10,7 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'vertex-ai-backend'
+      - 'backend'
       - '--image=gcr.io/$PROJECT_ID/backend'
       - '--region=us-central1'
       - '--platform=managed'
